k8s/controller.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diploma-controller
  template:
    metadata:
      labels:
        app: diploma-controller
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: diploma-controller-sa
      containers:
      - name: controller
        image: us-central1-docker.pkg.dev/diploma-balancer/diploma-images/controller:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
          name: metrics
        - containerPort: 8002
          name: logs
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
      volumes:
      - name: logs-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: diploma-controller-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: diploma-controller
  ports:
  - port: 8002
    targetPort: 8002
    name: logs
