k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  namespace: default
  labels:
    app: diploma-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: diploma-app
  template:
    metadata:
      labels:
        app: diploma-app
    spec:
      containers:
      - name: microservice
        image: us-central1-docker.pkg.dev/diploma-balancer/diploma-images/microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: diploma-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: diploma-app
  ports:
  - port: 8000
    targetPort: 8000
